--- a/manh.html
+++ b/manh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>heart bubbles</title>
+<title>híp</title>
 <link rel="stylesheet" href="manh.css" />
 </head>
 <body>
